unpackaged/main/default/objects/WorkOrder/fields/Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Time__c</fullName>
    <description>Service Appointment Scheduled Date Time</description>
    <label>Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>