unpackaged/main/default/objects/WorkOrder/fields/Scope_of_Works_Amended_by_Operative__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Works_Amended_by_Operative__c</fullName>
    <description>The Amended Scope of Works entered by the Operative (will be same as Work Type Scope of Works if not amended)</description>
    <inlineHelpText>The Amended Scope of Works entered by the Operative (will be same as Work Type Scope of Works if not amended)</inlineHelpText>
    <label>Scope of Works</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>