unpackaged/main/default/objects/WorkOrder/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <description>For Engineer to see on their mobile in FSL</description>
    <inlineHelpText>Status of the Service Appointment with additional statuses for On site conversions/Estimates accepted/declined</inlineHelpText>
    <label>Service Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>On site</fullName>
            </value>
            <value>
                <fullName>Visit Complete</fullName>
            </value>
            <value>
                <fullName>Job Closure</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>