unpackaged/main/default/objects/WorkOrder/fields/ServiceApptStatus_WO_Number_RecordType__c.field-meta.xml
<CustomField>
    <fullName>ServiceApptStatus_WO_Number_RecordType__c</fullName>
    <description>This field only exists for the FSL Mobile app  and the Work Order overview screen - you can only have a limited number of fields displayed, hence this field that consists of 3 fields.</description>
    <formula>TEXT(Service_Appointment_Status__c) &amp; &quot; - &quot; &amp;  WorkOrderNumber &amp; &quot; - &quot; &amp;  Record_Type_Name__c</formula>
    <inlineHelpText>This field only exists for the FSL Mobile app  and the Work Order overview screen - you can only have a limited number of fields displayed, hence this field that consists of 3 fields.</inlineHelpText>
    <label>ServiceApptStatus WO Number + RecordType</label>
    <type>Text</type>
</CustomField>