unpackaged/main/default/objects/WorkOrder/fields/Short_Summary_of_Further_Works_Required__c.field-meta.xml
<CustomField>
    <fullName>Short_Summary_of_Further_Works_Required__c</fullName>
    <description>If further work is required, hopefully the Operative has entered some details here.</description>
    <inlineHelpText>If further work is required, hopefully the Operative has entered some details here.</inlineHelpText>
    <label>Short Summary of Further Works Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>