unpackaged/main/default/objects/WorkOrder/fields/Siclops_Reference__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Reference__c</fullName>
    <label>Siclops_Reference</label>
    <length>22</length>
    <type>Text</type>
</CustomField>