unpackaged/main/default/objects/WorkOrder/fields/Site_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Post_Code__c</fullName>
    <description>The Post Code of the Site this Work Order is related to.</description>
    <formula>Site__r.Site_PostalCode__c</formula>
    <inlineHelpText>The Post Code of the Site this Work Order is related to.</inlineHelpText>
    <label>Site Post Code</label>
    <type>Text</type>
</CustomField>