unpackaged/main/default/objects/WorkOrder/fields/Sum_of_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Product_Required__c</fullName>
    <description>Sum of All Products Required - whether they be related to the Work Order or the Work Order Line Item</description>
    <formula>BLANKVALUE(Sum_of_WO_PO_Product_Required__c,0) +  BLANKVALUE(Sum_of_WO_Van_Stock_Product_Required__c,0) + BLANKVALUE( Sum_of_WO_Scaffolding_Product_Required__c ,0)



/*BLANKVALUE(Sum_of_WOLI_PO_Product_Required__c,0) +  BLANKVALUE(Sum_of_WOLI_Van_Stock_Product_Required__c,0) +  BLANKVALUE(Sum_of_WO_PO_Product_Required__c,0) +  BLANKVALUE(Sum_of_WO_Van_Stock_Product_Required__c,0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of All Products Required - whether they be related to the Work Order or the Work Order Line Item</inlineHelpText>
    <label>Sum of Product Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>