unpackaged/main/default/objects/WorkOrder/fields/Sum_of_Purchase_Orders_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Purchase_Orders_Incl_VAT__c</fullName>
    <label>Sum of Purchase Orders Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>