unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WO_PO_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WO_PO_Product_Required__c</fullName>
    <description>Sum of Product Required of Type Purchase Order including mark-up</description>
    <inlineHelpText>Sum of Product Required of Type Purchase Order including mark-up</inlineHelpText>
    <label>Sum of WO PO Product Required</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>