unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WO_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WO_Product_Required__c</fullName>
    <description>Sum of All Products Required - Related to the Work Order ONLY (not WOLIs)</description>
    <formula>BLANKVALUE(Sum_of_WO_PO_Product_Required__c,0) +  BLANKVALUE(Sum_of_WO_Scaffolding_Product_Required__c,0) +  
BLANKVALUE(Sum_of_WO_Van_Stock_Product_Required__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of All Products Required - Related to the Work Order ONLY (not WOLIs)</inlineHelpText>
    <label>Sum of WO Product Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>