unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WO_Product_Required_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WO_Product_Required_Incl_VAT__c</fullName>
    <description>Sum of WO PO Product Required + an assumed VAT rate of 20%</description>
    <formula>BLANKVALUE( Sum_of_WO_Product_Required__c , 0) *1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of WO PO Product Required + an assumed VAT rate of 20%</inlineHelpText>
    <label>Sum of WO Product Required Incl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>