unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WO_Scaffolding_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WO_Scaffolding_Product_Required__c</fullName>
    <label>Sum of WO Scaffolding Product Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>