unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WO_Van_Stock_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WO_Van_Stock_Product_Required__c</fullName>
    <label>Sum of WO Van Stock Product Required</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>