unpackaged/main/default/objects/WorkOrder/fields/Sum_of_WOLI_PO_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_WOLI_PO_Product_Required__c</fullName>
    <label>Sum of WOLI PO Product Required</label>
    <summarizedField>WorkOrderLineItem.Total_Costs_for_PO_Prod_Req__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>