unpackaged/main/default/objects/WorkOrder/fields/Summarised_WO_Info_for_Flow_display__c.field-meta.xml
<CustomField>
    <fullName>Summarised_WO_Info_for_Flow_display__c</fullName>
    <description>To be used to display list of Work Orders to the User, as we can only display one field, we are concatenating several here.</description>
    <formula>WorkOrderNumber &amp; &quot;: &quot;  &amp; Work_Type_Name__c &amp; &quot;, Status: &quot; &amp;  TEXT(Status) &amp; &quot;, Scheduled Date/Time: &quot; &amp; IF(TEXT(Scheduled_Date_Time__c)=&#39;Z&#39;,&quot;&quot;,
LPAD(TEXT(DAY(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;) &amp; &quot;/&quot; &amp; LPAD(TEXT(MONTH(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;) &amp; &quot;/&quot; &amp;  LPAD(TEXT(YEAR(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;))</formula>
    <label>Summarised WO Info for Flow display</label>
    <type>Text</type>
</CustomField>