unpackaged/main/default/objects/WorkOrder/fields/Support_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Form_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp;
&quot;/forms/support/?id=&quot;&amp;Id&amp;
&quot;&amp;con=&quot;&amp; Contact.Id &amp;
&quot;&amp;acc=&quot;&amp; AccountId &amp;
&quot;&amp;jid=&quot;&amp; Job__c  &amp;
&quot;&amp;sid=&quot;&amp;  Site__r.Id   &amp;
&quot;&amp;job=&quot;&amp; Job__r.Name &amp;
&quot;&amp;cli=&quot;&amp;SUBSTITUTE(  Contact.FirstName  , &quot; &quot;, &quot;%20&quot;)&amp;&quot;%20&quot;&amp;SUBSTITUTE(  Contact.LastName  , &quot; &quot;, &quot;%20&quot;)&amp;
&quot;&amp;ema=&quot;&amp;  Contact.Email &amp;
&quot;&amp;pho=&quot;&amp;  SUBSTITUTE(Contact.Phone, &quot; &quot;, &quot;&quot;)</formula>
    <label>Support Form URL</label>
    <type>Text</type>
</CustomField>