unpackaged/main/default/objects/WorkOrder/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <defaultValue>&quot;https://www.bbc.co.uk/news&quot;</defaultValue>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>