unpackaged/main/default/objects/WorkOrder/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Deletion Candidate</description>
    <label>Time (delete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1AM</fullName>
            </value>
            <value>
                <fullName>2AM</fullName>
            </value>
            <value>
                <fullName>3AM</fullName>
            </value>
            <value>
                <fullName>4AM</fullName>
            </value>
            <value>
                <fullName>5AM</fullName>
            </value>
            <value>
                <fullName>6AM</fullName>
            </value>
            <value>
                <fullName>7AM</fullName>
            </value>
            <value>
                <fullName>8AM</fullName>
            </value>
            <value>
                <fullName>9AM</fullName>
            </value>
            <value>
                <fullName>10AM</fullName>
            </value>
            <value>
                <fullName>11AM</fullName>
            </value>
            <value>
                <fullName>12PM</fullName>
            </value>
            <value>
                <fullName>1PM</fullName>
            </value>
            <value>
                <fullName>2PM</fullName>
            </value>
            <value>
                <fullName>3PM</fullName>
            </value>
            <value>
                <fullName>4PM</fullName>
            </value>
            <value>
                <fullName>5PM</fullName>
            </value>
            <value>
                <fullName>6PM</fullName>
            </value>
            <value>
                <fullName>7PM</fullName>
            </value>
            <value>
                <fullName>8PM</fullName>
            </value>
            <value>
                <fullName>9PM</fullName>
            </value>
            <value>
                <fullName>10PM</fullName>
            </value>
            <value>
                <fullName>11PM</fullName>
            </value>
            <value>
                <fullName>12AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>