unpackaged/main/default/objects/WorkOrder/fields/Time_Calc_TEST__c.field-meta.xml
<CustomField>
    <fullName>Time_Calc_TEST__c</fullName>
    <formula>TEXT( Arrival_Window_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Calc TEST</label>
    <type>Text</type>
</CustomField>