unpackaged/main/default/objects/WorkOrder/fields/Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Time_Window__c</fullName>
    <formula>IF(ISBLANK(Scheduled_Date_Time__c),NULL,
IF( VALUE( MID( TEXT( Scheduled_Date_Time__c ), 12, 2 ) ) &lt; 12, &quot;Morning&quot;, IF( VALUE( MID( TEXT( Scheduled_Date_Time__c ), 12, 2 ) ) &lt; 17,&quot;Afternoon&quot;,
IF( VALUE( MID( TEXT( Scheduled_Date_Time__c ), 12, 2 ) ) &lt; 21,&quot;Evening&quot;,&quot;Other&quot;) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Window</label>
    <type>Text</type>
</CustomField>