unpackaged/main/default/objects/WorkOrder/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>Trade for the Work Type - added this for the H&amp;S Flow + thought it better to use a formula than look it up each time.</description>
    <formula>TEXT( WorkType.Trade__c )</formula>
    <inlineHelpText>Trade for the Work Type</inlineHelpText>
    <label>Trade</label>
    <type>Text</type>
</CustomField>