unpackaged/main/default/objects/WorkOrder/fields/Trade_for_Further_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Trade_for_Further_Work_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Further work is required then the Operative should also enter the Trade, e.g. Electrical, Gardening etc</description>
    <inlineHelpText>If Further work is required then the Operative should also enter the Trade, e.g. Electrical, Gardening etc</inlineHelpText>
    <label>Trade for Further Work Required</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Further Work Required Work Orders</relationshipLabel>
    <relationshipName>Further_Work_Required_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>