unpackaged/main/default/objects/WorkOrder/fields/Trade_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trade_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Rate</label>
    <referenceTo>Rate_Card_Trade__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>