unpackaged/main/default/objects/WorkOrder/fields/URL_123Form__c.field-meta.xml
<CustomField>
    <fullName>URL_123Form__c</fullName>
    <description>To be used whithin the flow to generate 123form templates in the FLS Mobile App.</description>
    <label>URL 123Form</label>
    <type>Url</type>
</CustomField>