unpackaged/main/default/objects/WorkOrder/fields/Visitour_ID__c.field-meta.xml
<CustomField>
    <fullName>Visitour_ID__c</fullName>
    <label>Visitour ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>