unpackaged/main/default/objects/WorkOrder/fields/Visitour_Priority__c.field-meta.xml
<CustomField>
    <fullName>Visitour_Priority__c</fullName>
    <description>Priority of the case</description>
    <formula>CASE(TEXT(Priority), &#39;Critical&#39; , 3 ,&#39;High&#39; ,3,&#39;Medium&#39; ,2 , &#39;Low&#39;, 1, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitour Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>