unpackaged/main/default/objects/WorkOrder/fields/Was_Customer_present_to_take_Payment__c.field-meta.xml
<CustomField>
    <fullName>Was_Customer_present_to_take_Payment__c</fullName>
    <label>Was Customer present to take Payment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>