unpackaged/main/default/objects/WorkOrder/fields/Who_When_Materials_Approved_by_Office__c.field-meta.xml
<CustomField>
    <fullName>Who_When_Materials_Approved_by_Office__c</fullName>
    <label>Who/When Materials Approved by Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>