unpackaged/main/default/objects/WorkOrder/fields/WO_has_SA__c.field-meta.xml
<CustomField>
    <fullName>WO_has_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used in this Flow: FL List Work Orders for a Job - Call Authorisation Flow - SA Flow - because in the Choice variable to list all Work Orders which Dont have a SA, you can only query one object - not its related records and you cant assign records to a choice variable - so this was the work around.</description>
    <label>WO has SA</label>
    <type>Checkbox</type>
</CustomField>