unpackaged/main/default/objects/WorkOrder/fields/WO_Status__c.field-meta.xml
<CustomField>
    <fullName>WO_Status__c</fullName>
    <description>Status of the Work Order</description>
    <formula>TEXT(Status)</formula>
    <inlineHelpText>Status of the Work Order</inlineHelpText>
    <label>WO Status</label>
    <type>Text</type>
</CustomField>