unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Alert_3__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Alert_3__c</fullName>
    <description>Deletion Candidate</description>
    <label>Work Order Alert 3 (delete)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>