unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Line_Item_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item_Duration__c</fullName>
    <description>This will be used for calculating the Rate of pay for the Fixed Cost Engineer Rate of Pay</description>
    <label>Work Order Line Item Duration</label>
    <summarizedField>WorkOrderLineItem.Duration</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>