unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Region__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Region__c</fullName>
    <description>this field will mainly be used in a process builder called &#39;Work Order Processes&#39; which will be able to create a sharing rule based on a region code</description>
    <label>Work Order Region</label>
    <length>16</length>
    <type>Text</type>
</CustomField>