unpackaged/main/default/objects/WorkOrder/fields/Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Name__c</fullName>
    <description>Required for Flow Create Fixed Cost Work Order</description>
    <formula>WorkType.Name</formula>
    <label>Work Type Name</label>
    <type>Text</type>
</CustomField>