unpackaged/main/default/objects/WorkOrder/validationRules/Reqs_in_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Reqs_in_Budget</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
 $User.ProfileId&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Credit_Control_Manager.X15_Char_Profile_ID__c,
$User.ProfileId&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c,
Budget_Remaining__c &lt;= -0.01
)</errorConditionFormula>
    <errorMessage>---------------------------------------------------------------------------------------
You cannot go over the Work Order budget
---------------------------------------------------------------------------------------</errorMessage>
</ValidationRule>