unpackaged/main/default/objects/WorkOrder/validationRules/Status_of_X_Cannot_editUpdate_WO.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_of_X_Cannot_editUpdate_WO</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
OR(TEXT(Status)=&#39;Rejected&#39;,PRIORVALUE(Status)=&#39;Rejected&#39;)
/*ISCHANGED(LastModifiedDate)*/
)</errorConditionFormula>
    <errorMessage>Testing - cannot change a WO if in Status of Rejected</errorMessage>
</ValidationRule>