unpackaged/main/default/objects/WorkOrder/listViews/All_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Booking_Type__c</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>RecordType</columns>
    <columns>CreatedDate</columns>
    <columns>WorkType</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_Type__c</field>
        <operation>contains</operation>
        <value>OP app self reactive,OP app reactive referral,Op App Self Service</value>
    </filters>
    <label>All Work Orders</label>
</ListView>