unpackaged/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Trade__c</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>Id</columns>
    <columns>CreatedDate</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
    <sharedTo>
        <group>Complaint_Team_Manager_s</group>
        <group>FIELD_SERVICE_Default</group>
        <group>Franchise_Users</group>
        <group>North_East</group>
        <group>North_West</group>
        <group>R10_Service_Managers</group>
        <group>R11_Service_Manager</group>
        <group>R20_Service_Manager</group>
        <group>R21_Service_Manager</group>
        <group>R30_Service_Manager</group>
        <group>R31_Service_Manager</group>
        <group>R32_Service_Manager</group>
        <group>R40_Service_Manager</group>
        <group>R50_Service_Manager</group>
        <group>R51_Service_Manager</group>
        <group>South_East</group>
        <group>South_West</group>
        <role>CEO</role>
        <roleAndSubordinates>CEO</roleAndSubordinates>
    </sharedTo>
</ListView>