unpackaged/main/default/objects/WorkOrder/listViews/Completed_Work_Order.listView-meta.xml
<ListView>
    <fullName>Completed_Work_Order</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Date__c</columns>
    <columns>Time__c</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed,Closed</value>
    </filters>
    <label>Completed Work Orders</label>
</ListView>