unpackaged/main/default/objects/WorkOrder/listViews/Credit_Approval_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Credit_Approval_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Approval</label>
    <queue>Credit_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>