unpackaged/main/default/objects/WorkOrder/listViews/Credit_Control_Team_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Credit_Control_Team_WorkOrder</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>Credit Control Team</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>