unpackaged/main/default/objects/WorkOrder/listViews/Credit_Control_Team_WorkOrder1.listView-meta.xml
<ListView>
    <fullName>Credit_Control_Team_WorkOrder1</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Control Team</label>
    <queue>Credit_Control_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>