unpackaged/main/default/objects/WorkOrder/listViews/Credit_Department_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Credit_Department_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Department</label>
    <queue>Credit_Department</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>