unpackaged/main/default/objects/WorkOrder/listViews/Customer_Care_Team_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Customer_Care_Team_WorkOrder</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Care Team</label>
</ListView>