unpackaged/main/default/objects/WorkOrder/listViews/Customer_Care_Team_WorkOrder1.listView-meta.xml
<ListView>
    <fullName>Customer_Care_Team_WorkOrder1</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Care Team</label>
    <queue>Customer_Care_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>