unpackaged/main/default/objects/WorkOrder/listViews/Deposit_paid_no_SA.listView-meta.xml
<ListView>
    <fullName>Deposit_paid_no_SA</fullName>
    <columns>Sector__c</columns>
    <columns>Trade_Group__c</columns>
    <columns>Trade__c</columns>
    <columns>CreatedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedDate</columns>
    <columns>Name</columns>
    <columns>WorkType</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Feedback_Notes__c</columns>
    <columns>WO_has_SA__c</columns>
    <columns>Deposit_Invoice_Value__c</columns>
    <columns>Deposit_Invoice_Balance_Outstanding__c</columns>
    <columns>Requested_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WO_has_SA__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Deposit_Invoice_Lookup__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Deposit_Invoice_Value__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Deposit_Invoice_Balance_Outstanding__c</field>
        <operation>lessOrEqual</operation>
        <value>GBP 1</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Rejected,Complete</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Deposit paid no SA</label>
</ListView>