unpackaged/main/default/objects/WorkOrder/listViews/Deposit_paid_no_SA_Multiskill.listView-meta.xml
<ListView>
    <fullName>Deposit_paid_no_SA_Multiskill</fullName>
    <columns>Trade_Group__c</columns>
    <columns>Name</columns>
    <columns>Trade__c</columns>
    <columns>WorkType</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Feedback_Notes__c</columns>
    <columns>WO_has_SA__c</columns>
    <columns>Deposit_Invoice_Value__c</columns>
    <columns>Deposit_Invoice_Balance_Outstanding__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WO_has_SA__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Deposit_Invoice_Lookup__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Deposit_Invoice_Value__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Deposit_Invoice_Balance_Outstanding__c</field>
        <operation>lessOrEqual</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Rejected,Complete</value>
    </filters>
    <filters>
        <field>Trade__c</field>
        <operation>equals</operation>
        <value>,Access,Handyman,flooring,Brickwork,Decorating &amp; Paving,Carpentry,Fencing,Gardening,Glazing,Locksmithing,Partition walls &amp; ceilings,Plastering,Rubbish Removal,Tiling,Wallpapering,Windows &amp; Doors</value>
    </filters>
    <label>Deposit paid no SA Multiskill</label>
</ListView>